crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_reserved_tuple_end.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: f (x if) = 1
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:6]
 1 │ f (x if) = 1
   ·   ┬  ┬
   ·   │  ╰── expected `)`
   ·   ╰── opened here
   ╰────
  help: Add `)` here.
