crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_reserved_tuple_open.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
RESERVED WORD

  × It looks like you are trying to use `if` as a variable name:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: This is a reserved word! Try using some other name?
