crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_start_in_arg.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
nash::diagnostic

  × It looks like you are trying to use `if` as an argument:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: This is a reserved word! Try using some other name?
