crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_start_in_case.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "f = case x of\n    if -> 1"
---
nash::diagnostic

  × Reserved word `if` cannot be a pattern variable.
   ╭─[src/Main.nash:2:5]
 1 │ f = case x of
 2 │     if -> 1
   ·     ──
   ╰────
  help: Choose another name.
