crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_start_in_let.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: f = let if = 1 in 1
---
nash::diagnostic

  × Reserved word `if` cannot be a pattern variable.
   ╭─[src/Main.nash:1:9]
 1 │ f = let if = 1 in 1
   ·         ──
   ╰────
  help: Choose another name.
