crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_stray_bracket.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "]"
---
nash::diagnostic

  × I ran into an unexpected square bracket in this pattern:
   ╭─[src/Main.nash:1:1]
 1 │ ]
   · ─
   ╰────
  help: This ] does not match up with an earlier open square bracket. Try deleting it?
