crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_tuple_missing_end.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf (x = 1"
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:6]
 1 │ f (x = 1
   ·   ┬  ┬
   ·   │  ╰── expected `)`
   ·   ╰── opened here
   ╰────
  help: Add `)` here.
