crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_underscore_only_name.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: ___
---
nash::diagnostic

  × Variable names cannot start with underscores like this:
   ╭─[src/Main.nash:1:1]
 1 │ ___
   · ───
   ╰────
  help: You can either have an underscore like _ to ignore the value, or you can have a
        name like x or age to use the matched value.
