crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_underscore_uppercase_name.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: _Thing
---
  × Variable `_Thing` starts with an underscore.
   ╭─[src/Main.nash:1:1]
 1 │ _Thing
   · ──────
   ╰────
  help: Use `_` to ignore the value, or a name without a leading underscore.
