crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_wildcard_not_var.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf _foo = 1"
---
UNEXPECTED NAME

  × Variable names cannot start with underscores like this:
   ╭─[src/Main.nash:1:3]
 1 │ f _foo = 1
   ·   ────
   ╰────
  help: You can either have an underscore like _ to ignore the value, or you can have a
        name like foo to use the matched value.
