crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__space_endless_comment.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\n{- unfinished"
---
  × Expected `-}` to close `{-`.
   ╭─[src/Main.nash:1:14]
 1 │ {- unfinished
   · ─┬           ┬
   ·  │           ╰── expected `-}`
   ·  ╰── opened here
   ╰────
  help: Add `-}` here.
